2001-11-23  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* libsmi-0.3.tar.gz: released version 0.3.

	* ANNOUNCE: Finalized things for release 0.3.

	* tools/smidiff.c: Torsten Klie <tklie@ibr.cs.tu-bs.de> and
	Juergen Schoenwaelder <schoenw@ibr.cs.tu-bs.de> have spent a
	lot of work on this new tool during the past three months.

2001-10-12  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/parser-smi.y: Chris Avis <chris@snmptech.com> supplied a
	patch to detect zero value enumeration numbers in SMIv1, which
	is illegal.

2001-09-19  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/parser-smi.y: Fixed warning on numerical OID DEFVALs.

2001-08-31  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/data.c: Fixed some missing fclose() calls. Thanks to
	Abhay Deshmukh.

2001-08-30  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* mibs/ietf/DISMAN-SCRIPT-MIB: updated (RFC 3165).

2001-08-28  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* mibs/ietf/DOCS-BPI-MIB: added (RFC 3083).

	* mibs/ietf/INTERFACETOPN-MIB: added (RFC 3144).

2001-08-27  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* win/makefile: Added a fix from Yigal.

	* lib/smi.c,data.c: #ifdef'ed caching, so that MSC systems
	don't have problems.

2001-08-24  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* libsmi-0.2.17.tar.gz: released version 0.2.17.

	* lib/smi.c: Fixed a bug with `-f/dev/null'.

2001-08-22  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/data.c,smi.c,...: Added support for multiple MIB data sets.

	* lib/check.c: Updated the InetAddressType/InetAddress check.

2001-08-16  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* Makefile.in,...: Kicked out files from the CVS repository
	that don't belong there and added an autogen.sh script.

	* lib/parser-smi.y,data.c: Fixed more memory leaks.

2001-08-15  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* doc/draft-irtf-nmrg-smi-xml-00.txt,smi.dtd: Added these
	files to document the xml output driver. Note that this
	Internet Draft has expired.
	